--- a/style.css
+++ b/style.css
@@ -1,16 +1,15 @@
 :root{
-    --color-primary : #F5F8DE;
-    --color-primaryshadow : #EDF0D2;
-    --color-secondary : #EA6386;
-    --color-primary-dark : #222222;
-    --color-primaryshadow-dark : #202020;
+    --color-primary : #f2f0e4;
+    --color-primaryshadow : #edebde;
+    --color-secondary : #5376b2;
+    --color-primary-dark : #1e2140;
+    --color-primaryshadow-dark : #151932;
     --color-secondary-dark : #CC2936;
-
-    --font-color : #2E2E2E;
+    --font-color : #343331;
     --font-color-dark: #CECECE;
     --font-color-active: #FFFFFF;
 
-    --shadow : 1px 2px 6px #00000040, -1px -2px 6px #FFFFFF40;
+    --shadow : 1px 2px 6px #00000040, -1px -2px 6px #ffffff40;
     --inset-shadow : inset 1px 2px 2px #00000040, inset -1px -2px 3px #FFFFFF40;
 }
 *{
@@ -126,11 +125,11 @@ body.dark .timer{
     left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: none;
-    border: 2px solid #e2e2e2;
+    border: 2px solid #e1dfd2;
 }
 body.dark .timer::after{
     background-color: var(--color-primary-dark);
-    border: 2px solid #2a2a2a;
+    border: 2px solid #151932;
 }
 .timer.active::after{
     background-color: var(--color-primaryshadow);
@@ -335,8 +334,11 @@ body.dark .config svg path{
     border-radius: 100%;
     margin: 0 1em;
 }
-.circle.active{
+#white.circle.active {
     border: 4px solid var(--color-secondary);
+}
+#dark.circle.active{
+    border: 4px solid var(--color-secondary-dark);
 }
 #white{
     background-color: var(--color-primary);
@@ -362,8 +364,9 @@ body.dark .config svg path{
     transform: translate(-50%, 50%);
     box-shadow: var(--shadow);
 }
-
-
+body.dark .config-apply{
+    background-color: var(--color-secondary-dark);
+}
 
 
 
