--- a/style.css
+++ b/style.css
@@ -335,9 +335,13 @@ body.dark .config svg path{
     margin: 0 1em;
 }
 #white.circle.active {
+    width: 72px;
+    height: 72px;
     border: 4px solid var(--color-secondary);
 }
 #dark.circle.active{
+    width: 72px;
+    height: 72px;
     border: 4px solid var(--color-secondary-dark);
 }
 #white{
