--- a/style.css
+++ b/style.css
@@ -102,8 +102,8 @@ body.dark .header__button--active{
     display: block;
     width: 300px;
     height: 300px;
-    margin-top: 5em;
-    margin-bottom: 5em;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
     margin-left: auto;
     margin-right: auto;
     background-color: var(--color-primary);
